--- a/apps/graphql-gateway/tsconfig.app.json
+++ b/apps/graphql-gateway/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/api-gateway"
+    "outDir": "../../dist/apps/graphql-gateway"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
