--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   ],
   "scripts": {
     "build": "nest build",
+    "build:auth": "nest build auth",
+    "build:user": "nest build user",
+    "build:gateway": "nest build graphql-gateway",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "format:check": "prettier --check \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/FoodFund-Microservices/main",
+    "start:auth": "nest start auth --watch",
+    "start:user": "nest start user --watch", 
+    "start:gateway": "nest start graphql-gateway --watch",
+    "start:prod": "node dist/apps/graphql-gateway/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest --config jest.config.js",
@@ -25,9 +31,13 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config jest-e2e.config.js",
     "prisma:generate": "prisma generate",
+    "prisma:generate:user": "cd apps/user && npx prisma generate",
     "prisma:studio": "prisma studio",
+    "prisma:studio:user": "cd apps/user && npx prisma studio",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:deploy": "prisma migrate deploy"
+    "prisma:migrate:user": "cd apps/user && npx prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:deploy:user": "cd apps/user && npx prisma migrate deploy"
   },
   "dependencies": {
     "@apollo/gateway": "^2.11.2",
@@ -45,6 +55,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.14.0",
     "aws-jwt-verify": "^4.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "graphql": "^16.8.1",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
