--- a/k8s/values-staging.yaml
+++ b/k8s/values-staging.yaml
@@ -1,156 +1,86 @@
-# Staging values for FoodFund microservices
-# This file contains staging environment configurations
+# Staging environment values
+# Override default values for staging
 
-# Global settings
 global:
-  imageRegistry: ""
-  imagePullPolicy: IfNotPresent
+  imageRegistry: "phuoctmse"
+  imagePullPolicy: Always
+  namespace: "foodfund-staging"
 
-# Namespace
-namespace:
-  create: true
-  name: "foodfund-staging"
-
-# Auth Service - Staging configuration
+# Auth Service - Staging
 auth:
-  enabled: true
   image:
-    repository: "foodfund-auth"
-    tag: "staging"
-    pullPolicy: Always
-
-  replicaCount: 1  # Single replica for staging
-
-  service:
-    type: ClusterIP
-    port: 8002
-    targetPort: 8002
-
+    tag: "develop"  # Use develop branch for staging
+  
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "250m"
+      memory: "64Mi"
+      cpu: "50m"
     limits:
-      memory: "512Mi"
-      cpu: "500m"
+      memory: "128Mi"
+      cpu: "100m"
 
-  healthCheck:
-    enabled: true
-    path: "/health"
-    initialDelaySeconds: 30
-    periodSeconds: 10
-    timeoutSeconds: 5
-    failureThreshold: 3
+  env:
+    - name: NODE_ENV
+      value: "staging"
+    - name: PORT
+      value: "8002"
 
-# GraphQL Gateway - Staging configuration
+# Gateway - Staging
 gateway:
-  enabled: true
   image:
-    repository: "foodfund-gateway"
-    tag: "staging"
-    pullPolicy: Always
-
-  replicaCount: 1  # Single replica for staging
-
+    tag: "develop"
+  
   service:
-    type: ClusterIP
-    port: 8000
-    targetPort: 8000
-
+    type: ClusterIP  # No external access in staging
+  
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "250m"
+      memory: "64Mi"
+      cpu: "50m"
     limits:
-      memory: "512Mi"
-      cpu: "500m"
+      memory: "128Mi"
+      cpu: "100m"
 
-  healthCheck:
-    enabled: true
-    path: "/health"
-    initialDelaySeconds: 30
-    periodSeconds: 10
-    timeoutSeconds: 5
-    failureThreshold: 3
+  env:
+    - name: NODE_ENV
+      value: "staging"
+    - name: PORT
+      value: "8000"
 
-# PostgreSQL - Staging configuration
+# User Service - Staging
+user:
+  image:
+    tag: "develop"
+  
+  resources:
+    requests:
+      memory: "64Mi"
+      cpu: "50m"
+    limits:
+      memory: "128Mi"
+      cpu: "100m"
+
+  env:
+    - name: NODE_ENV
+      value: "staging"
+    - name: PORT
+      value: "8003"
+
+# PostgreSQL - Staging (smaller resources)
 postgresql:
-  enabled: true
-
-  architecture: standalone  # Single instance for staging
-
   auth:
-    postgresPassword: "staging-password"
-    username: "foodfund"
-    password: "staging-password"
-    database: "foodfund"
+    postgresPassword: "staging123"
+    password: "staging123"
 
   primary:
     persistence:
-      enabled: true
-      size: 10Gi
-      storageClass: "standard"
+      size: 4Gi
 
-    initdb:
-      scripts:
-        init.sql: |
-          CREATE DATABASE users_db;
-          CREATE DATABASE campaigns_db;
-          GRANT ALL PRIVILEGES ON DATABASE users_db TO foodfund;
-          GRANT ALL PRIVILEGES ON DATABASE campaigns_db TO foodfund;
-
-  metrics:
-    enabled: false
-
-# Ingress - Staging configuration
+# Ingress for staging
 ingress:
   enabled: true
-  className: "nginx"
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
   hosts:
-    - host: staging-api.foodfund.com
+    - host: staging-api.foodfund.local
       paths:
         - path: /
           pathType: Prefix
-
-# Service Account
-serviceAccount:
-  create: true
-
-# Resource limits for staging (lighter than production)
-nodeSelector:
-  environment: staging
-
-tolerations: []
-
-affinity: {}
-
-# Network Policies
-networkPolicy:
-  enabled: false  # Disabled for easier testing in staging
-
-# Jenkins - Enabled for staging CI/CD
-jenkins:
-  enabled: true
-  image:
-    repository: "jenkins/jenkins"
-    tag: "lts"
-
-  service:
-    type: ClusterIP
-    port: 8080
-    targetPort: 8080
-
-  persistence:
-    enabled: true
-    size: 20Gi
-    storageClass: "standard"
-
-  resources:
-    requests:
-      memory: "512Mi"
-      cpu: "250m"
-    limits:
-      memory: "1Gi"
-      cpu: "500m"
