--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,101 +1,245 @@
-name: CI/CD Pipeline
+name: FoodFund CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
-      - demo-learn-test
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
+
+env:
+  REGISTRY: docker.io
 
 jobs:
   build-and-test:
+    name: Build & Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: 🔧 Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm ci
 
-      - name: Run linter
+      - name: 🔍 Run linter
         run: npm run lint
 
-      - name: Run tests
+      - name: 🧪 Run tests
         run: npm run test
 
-      - name: Build auth app
+      - name: 🏗️ Build auth app
         run: npm run build auth
 
-      - name: Build graphql-gateway app
+      - name: 🏗️ Build user app
+        run: npm run build user  
+
+      - name: 🏗️ Build graphql-gateway app
         run: npm run build graphql-gateway
 
-
   build-and-push-docker:
+    name: Build & Push Docker Images
     needs: build-and-test
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: 🔐 Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: 🔧 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Set branch name env
+      - name: 🏷️ Set branch name env
         run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Build and push auth service
-        uses: docker/build-push-action@v4
+      - name: 🔨 Build and push auth service
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./apps/auth/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-auth:${{ env.BRANCH_NAME }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Build and push graphql-gateway service
-        uses: docker/build-push-action@v4
+      - name: 🔨 Build and push user service
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/user/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-user:${{ env.BRANCH_NAME }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: 🔨 Build and push graphql-gateway service
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./apps/graphql-gateway/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodfund-graphql-gateway:${{ env.BRANCH_NAME }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  deploy-to-k8s:
+  deploy-to-digitalocean:
+    name: Deploy to Digital Ocean Kubernetes
     needs: build-and-push-docker
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Kubeconfig
-        run: |
-          echo "${{ secrets.KUBE_CONFIG_DATA }}" > kubeconfig
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+      - name: 🏷️ Set branch name env
+        run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v3
+      - name: 🔧 Install doctl
+        uses: digitalocean/action-doctl@v2
         with:
-          version: 'latest'
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
-      - name: Install Helm
+      - name: ☸️ Save DigitalOcean kubeconfig
+        run: doctl kubernetes cluster kubeconfig save ${{ secrets.DIGITALOCEAN_CLUSTER_NAME }}
+
+      - name: ⚡ Install Helm
         uses: azure/setup-helm@v3
         with:
-          version: 'latest'
+          version: 'v3.13.0'
 
-      - name: Deploy Helm chart
+      - name: 🚀 Deploy to Kubernetes
         run: |
-          helm upgrade --install foodfund ./k8s --kubeconfig kubeconfig --namespace foodfund --create-namespace        
+          # Determine environment configuration based on branch
+          if [ "${{ env.BRANCH_NAME }}" = "main" ]; then
+            ENVIRONMENT="production"
+            NAMESPACE="foodfund-production"
+            REPLICAS=2
+            GATEWAY_TYPE="LoadBalancer"
+            NODE_ENV="production"
+            RESOURCES_REQUESTS_MEMORY="256Mi"
+            RESOURCES_REQUESTS_CPU="200m"
+            RESOURCES_LIMITS_MEMORY="512Mi"
+            RESOURCES_LIMITS_CPU="500m"
+          elif [ "${{ env.BRANCH_NAME }}" = "develop" ]; then
+            ENVIRONMENT="staging"  
+            NAMESPACE="foodfund-staging"
+            REPLICAS=1
+            GATEWAY_TYPE="LoadBalancer"
+            NODE_ENV="staging"
+            RESOURCES_REQUESTS_MEMORY="128Mi"
+            RESOURCES_REQUESTS_CPU="100m"
+            RESOURCES_LIMITS_MEMORY="256Mi"
+            RESOURCES_LIMITS_CPU="250m"
+          else
+            ENVIRONMENT="development"
+            NAMESPACE="foodfund-${{ env.BRANCH_NAME }}"
+            REPLICAS=1
+            GATEWAY_TYPE="ClusterIP"
+            NODE_ENV="development"
+            RESOURCES_REQUESTS_MEMORY="128Mi"
+            RESOURCES_REQUESTS_CPU="100m"
+            RESOURCES_LIMITS_MEMORY="256Mi"
+            RESOURCES_LIMITS_CPU="250m"
+          fi
+          
+          echo "🚀 Deploying to environment: $ENVIRONMENT"
+          echo "📦 Namespace: $NAMESPACE"
+          echo "🔢 Replicas: $REPLICAS"
+          echo "🌐 Gateway Type: $GATEWAY_TYPE"
+          echo "⚙️ Node Environment: $NODE_ENV"
+          
+          # Deploy using Helm with all configurations
+          helm upgrade --install foodfund-${{ env.BRANCH_NAME }} ./k8s \
+            -f ./k8s/values.yaml \
+            --namespace $NAMESPACE \
+            --create-namespace \
+            --set global.imageRegistry=${{ secrets.DOCKERHUB_USERNAME }} \
+            --set global.namespace=$NAMESPACE \
+            --set auth.image.tag=${{ env.BRANCH_NAME }} \
+            --set gateway.image.tag=${{ env.BRANCH_NAME }} \
+            --set user.image.tag=${{ env.BRANCH_NAME }} \
+            --set auth.replicaCount=$REPLICAS \
+            --set gateway.replicaCount=$REPLICAS \
+            --set user.replicaCount=$REPLICAS \
+            --set gateway.service.type=$GATEWAY_TYPE \
+            --set auth.env[0].value=$NODE_ENV \
+            --set gateway.env[0].value=$NODE_ENV \
+            --set user.env[0].value=$NODE_ENV \
+            --set auth.resources.requests.memory=$RESOURCES_REQUESTS_MEMORY \
+            --set auth.resources.requests.cpu=$RESOURCES_REQUESTS_CPU \
+            --set auth.resources.limits.memory=$RESOURCES_LIMITS_MEMORY \
+            --set auth.resources.limits.cpu=$RESOURCES_LIMITS_CPU \
+            --set gateway.resources.requests.memory=$RESOURCES_REQUESTS_MEMORY \
+            --set gateway.resources.requests.cpu=$RESOURCES_REQUESTS_CPU \
+            --set gateway.resources.limits.memory=$RESOURCES_LIMITS_MEMORY \
+            --set gateway.resources.limits.cpu=$RESOURCES_LIMITS_CPU \
+            --set user.resources.requests.memory=$RESOURCES_REQUESTS_MEMORY \
+            --set user.resources.requests.cpu=$RESOURCES_REQUESTS_CPU \
+            --set user.resources.limits.memory=$RESOURCES_LIMITS_MEMORY \
+            --set user.resources.limits.cpu=$RESOURCES_LIMITS_CPU \
+            --set externalDatabase.host="${{ secrets.DATABASE_HOST }}" \
+            --set externalDatabase.port=${{ secrets.DATABASE_PORT }} \
+            --set externalDatabase.username="${{ secrets.DATABASE_USERNAME }}" \
+            --set externalDatabase.password="${{ secrets.DATABASE_PASSWORD }}" \
+            --timeout 10m \
+            --wait
+          
+          echo "✅ Deployment completed successfully!"
+
+      - name: 📊 Show Deployment Status
+        run: |
+          # Determine namespace
+          if [ "${{ env.BRANCH_NAME }}" = "main" ]; then
+            NAMESPACE="foodfund-production"
+            GATEWAY_TYPE="LoadBalancer"
+          elif [ "${{ env.BRANCH_NAME }}" = "develop" ]; then
+            NAMESPACE="foodfund-staging"
+            GATEWAY_TYPE="LoadBalancer"
+          else
+            NAMESPACE="foodfund-${{ env.BRANCH_NAME }}"
+            GATEWAY_TYPE="ClusterIP"
+          fi
+          
+          echo "📊 Deployment Status in namespace: $NAMESPACE"
+          kubectl get pods -n $NAMESPACE -o wide
+          echo ""
+          echo "🌐 Services:"
+          kubectl get services -n $NAMESPACE
+          echo ""
+          
+          # Get LoadBalancer IP if available
+          if [ "$GATEWAY_TYPE" = "LoadBalancer" ]; then
+            echo "🔗 Getting LoadBalancer External IP..."
+            sleep 30  # Wait for LoadBalancer to be provisioned
+            EXTERNAL_IP=$(kubectl get service -n $NAMESPACE -l app.kubernetes.io/component=gateway -o jsonpath='{.items[0].status.loadBalancer.ingress[0].ip}' 2>/dev/null || echo "")
+            if [ -n "$EXTERNAL_IP" ] && [ "$EXTERNAL_IP" != "null" ]; then
+              echo "🎉 Your app is accessible at: http://$EXTERNAL_IP"
+              echo "🎯 GraphQL Playground: http://$EXTERNAL_IP/graphql"
+              echo "🏥 Health Check: http://$EXTERNAL_IP/health"
+            else
+              echo "⏳ LoadBalancer IP is still being assigned. Check status with:"
+              echo "kubectl get services -n $NAMESPACE"
+            fi
+          fi
+          
+          # Show recent events for debugging
+          echo ""
+          echo "📝 Recent events:"
+          kubectl get events -n $NAMESPACE --sort-by=.metadata.creationTimestamp | tail -5
