--- a/k8s/Chart.yaml
+++ b/k8s/Chart.yaml
@@ -16,11 +16,12 @@ maintainers:
   - name: FoodFund Team
     email: team@foodfund.com
 
-dependencies:
-  - name: postgresql
-    version: "15.2.0"
-    repository: "https://charts.bitnami.com/bitnami"
-    condition: postgresql.enabled
+# dependencies:
+  # PostgreSQL dependency removed - using external Digital Ocean Database Cluster
+  # - name: postgresql
+  #   version: "15.2.0"
+  #   repository: "https://charts.bitnami.com/bitnami"
+  #   condition: postgresql.enabled
 
 home: https://github.com/phuoctmse/FoodFund-Microservices
 sources:
